chore: remove unuseful build parameters