@@ -87,8 +87,6 @@ kotlin {
         freeCompilerArgs = listOf(
             "-Xjsr305=strict",
             "-Xcontext-parameters",
-            "--release NN",
-            "--enable-preview"
         )
         javaParameters = true
     }
